Show donation history of each user
