# gateway/pkg/controller/http/model.go
@@ -11,7 +11,7 @@ type errorResp struct {
 }
 
 type createUserReq struct {
-	Id         string `json:"id" example:"isutare412"`
+	Id         string `json:"id" example:"id001"`
 	Email      string `json:"email" example:"foo@bar.com"`
 	Nickname   string `json:"nickname" example:"redshore"`
 	GivenName  string `json:"givenName"`
@@ -39,15 +39,31 @@ func (r *createUserReq) IntoUser() *centity.User {
 }
 
 type getUserResp struct {
-	Id         string `json:"id" example:"isutare412"`
-	Email      string `json:"email" example:"foo@bar.com"`
-	Nickname   string `json:"nickname" example:"redshore"`
-	GivenName  string `json:"givenName"`
-	MiddleName string `json:"middleName"`
-	FamilyName string `json:"familyName"`
-	BirthYear  int    `json:"birthYear" example:"1993"`
-	BirthMonth int    `json:"birthMonth" example:"9"`
-	BirthDay   int    `json:"birthDay" example:"25"`
+	Id          string            `json:"id" example:"id001"`
+	Email       string            `json:"email" example:"foo@bar.com"`
+	Nickname    string            `json:"nickname" example:"redshore"`
+	GivenName   string            `json:"givenName"`
+	MiddleName  string            `json:"middleName"`
+	FamilyName  string            `json:"familyName"`
+	BirthYear   int               `json:"birthYear" example:"1993"`
+	BirthMonth  int               `json:"birthMonth" example:"9"`
+	BirthDay    int               `json:"birthDay" example:"25"`
+	DonatedFrom []*donateRelation `json:"donatedFrom"`
+	DonatedTo   []*donateRelation `json:"donatedTo"`
+}
+
+type donateRelation struct {
+	UserId    string    `json:"userId" example:"id001"`
+	Nickname  string    `json:"nickname" example:"redshore"`
+	Cents     int64     `json:"cents" example:"120"`
+	Timestamp time.Time `json:"timestamp" example:"2022-05-05T06:22:40.328Z"`
+}
+
+func (dr *donateRelation) FromDonateRelation(src *centity.DonateRelation) {
+	dr.UserId = src.UserId
+	dr.Nickname = src.Nickname
+	dr.Cents = src.Cents
+	dr.Timestamp = src.Timestamp
 }
 
 func (r *getUserResp) FromUser(user *centity.User) {
@@ -60,10 +76,24 @@ func (r *getUserResp) FromUser(user *centity.User) {
 	r.BirthYear = user.Birth.Year()
 	r.BirthMonth = int(user.Birth.Month())
 	r.BirthDay = user.Birth.Day()
+
+	r.DonatedFrom = make([]*donateRelation, 0, len(user.DonatedFrom))
+	for _, drEntity := range user.DonatedFrom {
+		var dr donateRelation
+		dr.FromDonateRelation(drEntity)
+		r.DonatedFrom = append(r.DonatedFrom, &dr)
+	}
+
+	r.DonatedTo = make([]*donateRelation, 0, len(user.DonatedTo))
+	for _, drEntity := range user.DonatedTo {
+		var dr donateRelation
+		dr.FromDonateRelation(drEntity)
+		r.DonatedTo = append(r.DonatedTo, &dr)
+	}
 }
 
 type requestDonationReq struct {
-	DonatorId string `json:"donatorId"`
-	DonateeId string `json:"donateeId"`
+	DonatorId string `json:"donatorId" example:"id001"`
+	DonateeId string `json:"donateeId" example:"id002"`
 	Cents     int64  `json:"cents" example:"150"`
 }
